<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/treescan_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
	android:orientation="vertical">    

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#FFFFFF"
	    android:orientation="vertical">
	    
		<!-- 위치바코드  -->
	    <LinearLayout
		    android:id="@+id/locView"
		    style="@style/Form.Styled.InputBox" >
		    <TextView
		        android:id="@+id/treescan_location_locCd_lavel"
			    style="@style/Form.Styled.LeftLavelTextView"
			    android:text="@string/treescan_location_locCd_lavel" />
		    <EditText
			    android:id="@+id/scanview_locCd"
			    android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginRight="5dp"
			    style="@style/Form.Styled.ScannableEditText" />
		    <Button android:id="@+id/locCdScan"            
				android:layout_width="50dp"
				android:layout_marginRight="5dp"
		        android:layout_height="32dp"
		        android:layout_gravity="left"
				android:text="scan"/>
		</LinearLayout>
		
		<!-- 설비바코드 -->
		<LinearLayout
		    android:id="@+id/facView"
		    style="@style/Form.Styled.InputBox" >
		    <TextView
		        android:id="@+id/treescan_fac_facCd_lavel"
			    style="@style/Form.Styled.LeftLavelTextView"
			    android:text="@string/treescan_fac_facCd_lavel" />
			<EditText
			    android:id="@+id/scanview_facCd"
			    android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginRight="5dp"
			    style="@style/Form.Styled.ScannableEditText" />
			<Button android:id="@+id/facCdScan"            
				android:layout_width="50dp"
				android:layout_marginRight="5dp"
		        android:layout_height="32dp"
		        android:layout_gravity="left"
				android:text="scan"/>		    
		</LinearLayout>
		
		<!-- S/N바코드 -->
		<LinearLayout
		    android:id="@+id/snView"
		    style="@style/Form.Styled.InputBox" >
		    <TextView
		        android:id="@+id/treescan_sn_facCd_lavel"
			    style="@style/Form.Styled.LeftLavelTextView"
			    android:text="@string/ismrequest_manu_SN_lavel" />
			<EditText
			    android:id="@+id/scanview_snCd"
			    android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginRight="5dp"
			    style="@style/Form.Styled.ScannableEditText" />
			<Button android:id="@+id/snCdScan"            
				android:layout_width="50dp"
				android:layout_marginRight="5dp"
		        android:layout_height="32dp"
		        android:layout_gravity="left"
				android:text="scan"/>		    
		</LinearLayout>
		
		<!-- 버튼Bar  -->
		<LinearLayout
		    android:id="@+id/treescan_crud_buttonbar"
		    style="@style/Form.Styled.ToolBar" >

			<LinearLayout
			    android:id="@+id/treescan_crud_none_buttonbar"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="right"
			    android:orientation="horizontal" >

	            <Button
	                android:id="@+id/base_crud_inquery"
	                style="@style/Form.Styled.RedButton"
	                android:layout_marginRight="4dp"
	                android:text="@string/ismrequest_crud_search_lavel" />
	            <!-- 
	            <Button
	                android:id="@+id/base_crud_save"
	                style="@style/Form.Styled.RedButton"
	                android:layout_marginRight="4dp"
	                android:text="@string/treescan_crud_save_lavel" />
	             -->
	            <Button
	                android:id="@+id/base_crud_send"
	                style="@style/Form.Styled.RedButton"
	                android:text="@string/treescan_crud_send_lavel" />
	        </LinearLayout>
		</LinearLayout>
		
	     <!-- 그리드뷰 -->
		<GridLayout
		    android:id="@+id/resultView"
		    android:layout_width="match_parent"
		    android:layout_height="fill_parent"
		    android:columnCount="1">
			
		    <!-- 상태  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="상태" />
			    <TextView
				    android:id="@+id/gridValue1"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 등록일자  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="등록일자" />
			    <TextView
				    android:id="@+id/gridValue2"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 위치명  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="위치명" />
			    <TextView
				    android:id="@+id/gridValue3"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 위치코드  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="위치코드" />
			    <TextView
				    android:id="@+id/gridValue4"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 장비명  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="장비명" />
			    <TextView
				    android:id="@+id/gridValue5"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 장비연식  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="장비연식" />
			    <TextView
				    android:id="@+id/gridValue6"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 설비명  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="설비명" />
			    <TextView
				    android:id="@+id/gridValue7"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 시리얼번호  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="시리얼번호" />
			    <TextView
				    android:id="@+id/gridValue8"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
			
		    <!-- 제조사  -->
		    <LinearLayout
			    style="@style/Form.Styled.InputBox" >
			    <TextView
				    style="@style/Form.Styled.LeftLavelTextView"
				    android:text="제조사" />
			    <TextView
				    android:id="@+id/gridValue9"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
				    style="@string/treescan_location_locCd_lavel"/>
			</LinearLayout>
		</GridLayout>
	     
	</LinearLayout>
</FrameLayout>